# DeepFake_Detection

./: .coverage  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  Makefile  README.md  check_results.py  config.yaml  data_preprocessing.py  dataset_diagnostic.py  deepfake_client.py  deploy.sh  docker-compose.gpu.yml  docker-compose.train.yml  docker-compose.yml  download_datasets.py  fix_torch_load.py  fix_transforms.py  infer_real_videos.py  nginx.conf  package-lock.json  package.json  pytest.ini  render.yaml  requirements.txt  retrain_balanced_complete.py  retrain_hybrid_complete.py  retrain_identity_split.py  retrain_identity_split_fixed.py  robust_video_detector.py  run_api.py  setup.py  test_api.py  test_final_model.py  test_phase1_quick.py  test_phase2.py  threshold_optimization_results.json  threshold_optimizer.py  train_diverse_robust.py  (+6 more)
.github/workflows/: ci.yml
backend/: Dockerfile  Dockerfile.gpu  Dockerfile.train  alembic.ini  inspect_ckpt.py  pyproject.toml  requirements-minimal.txt  requirements-train-noytorch.txt  requirements-train.txt
backend/app/: __init__.py  logging_config.py  main.py  metrics.py  settings.py
backend/app/api/: auth.py  deps.py  rate_limit.py  routes_analyze.py  routes_health.py  routes_jobs.py  routes_model.py  routes_reports.py  schemas.py
backend/app/ml/: __init__.py  architecture.py  calibration.py  ensemble_architecture.py  explainability.py  faces.py  inference_image.py  inference_video.py  model_registry.py  preprocess.py
backend/app/ml/data/: __init__.py  datasets.py  face_extractor.py  transforms.py
backend/app/persistence/: crud.py  db.py  models.py
backend/app/services/: caching.py  hashing.py  job_service.py  plotting.py  reporting.py  storage.py
backend/app/workers/: __init__.py  celery_app.py  tasks.py
backend/evaluation/: evaluation_results.json
backend/migrations/: env.py
backend/migrations/versions/: 001_initial.py
backend/tests/: conftest.py  test_api_image.py  test_heatmap.py  test_jobs.py
configs/: production_config.yaml  train_config.yaml
deepfake-frontend/: App.jsx  ConfidenceBar.jsx  ContentContainer.jsx  Disclaimer.jsx  FileUploader.jsx  LoadingSpinner.jsx  ModeContent.jsx  ModeSelector.jsx  predictionService.js  theme.js  usePrediction.js
deepfake-frontend/src/components/: Button.jsx  Header.jsx  WebcamViewer.jsx  index.js
deepfake-frontend/src/constants/: api.js
deepfake-frontend/src/hooks/: useFileUpload.js
deepfake-frontend/src/services/: api.js
deepfake-frontend/src/utils/: analytics.js  mediaUtils.js  webcamUtils.js
docs/: TRAINING_DEEP_DIVE.md  api.md  architecture.md  demo_script.md  model_card.md  run_with_trained_model.md  storage_efficient_guide.md
duckconfig/: pyvenv.cfg
examples/: phase1_demo.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: api.ts  main.tsx
frontend/src/components/: DemoBanner.tsx  FrameGallery.tsx  HeatmapViewer.tsx  IntroAnimation.tsx  Layout.tsx  MethodologyModal.tsx  TimelineChart.tsx  UploadDropzone.tsx  VerdictCard.tsx
frontend/src/pages/: Dashboard.tsx  LandingPage.tsx  ResultDetail.tsx  UploadImage.tsx  UploadVideo.tsx
frontend/src/styles/: index.css
infra/nginx/: nginx.conf
scripts/: download_datasets.py  download_faceforensics.py  evaluate.py  export_model.py  extract_faces.py  prepare_ff_splits.py  prepare_splits.py  train.py  train_production.py
src/: App.jsx  index.css
src/components/: ErrorAlert.jsx  ErrorBoundary.jsx  ResultCard.jsx  index.js
src/components/modes/: UploadMode.jsx  WebcamMode.jsx
src/constants/: ui.js
src/deepfake_detector/: __init__.py
src/deepfake_detector.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/deepfake_detector/api/: __init__.py  api_server.py  inference_service.py
src/deepfake_detector/data/: __init__.py  audio_processor.py  data_pipeline.py  dataset_manager.py  storage_efficient_manager.py  video_processor.py
src/deepfake_detector/models/: __init__.py  __init__.py.backup  aasist.py  audio_models.py  base.py  base_model.py  efficientnet.py  efficientnet_detector.py  evaluation.py  model_trainer.py  registry.py  registry.py.backup  test_utils.py  training.py  video_models.py  xception.py  xception_detector.py
src/deepfake_detector/models/audio/: simple_audio.py
src/deepfake_detector/utils/: __init__.py  config.py
src/hooks/: index.js  useKeyboardShortcuts.js  useMode.js  usePrediction.js  useWebcam.js
tests/: test_audio_processor.py  test_dataset_manager.py  test_video_processor.py
