[project]
name = "deepfake-detection-backend"
version = "1.0.0"
description = "Production-ready deepfake detection API"
authors = [
    {name = "Bivek Sharma Panthi", email = "sharmabivek12@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    # Web framework
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-multipart>=0.0.6",
    
    # Database
    "sqlalchemy>=2.0.23",
    "asyncpg>=0.29.0",
    "psycopg[binary]>=3.1.0",
    "alembic>=1.13.0",
    
    # Cache and Queue
    "redis>=5.0.0",
    "celery[redis]>=5.3.4",
    
    # ML and Image Processing
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "numpy>=1.26.0",
    "opencv-python-headless>=4.8.0",
    "Pillow>=10.1.0",
    
    # PDF Generation
    "reportlab>=4.0.0",
    "matplotlib>=3.8.0",
    
    # Authentication (optional)
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    
    # Metrics and Monitoring
    "prometheus-client>=0.19.0",
    
    # Utilities
    "httpx>=0.25.0",
    "aiofiles>=23.2.1",
    "python-json-logger>=2.0.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.25.0",
    "aiosqlite>=0.19.0",
    "ruff>=0.1.0",
    "black>=23.11.0",
    "mypy>=1.7.0",
    "types-redis>=4.6.0",
    "types-Pillow>=10.1.0",
    "types-aiofiles>=23.2.0",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | migrations
)/
'''

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    "migrations",
    "__pycache__",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.11"
strict = false
warn_return_any = false
warn_unused_ignores = false
disallow_untyped_defs = false
ignore_missing_imports = true
no_implicit_optional = false
exclude = ["migrations/"]
plugins = ["pydantic.mypy"]

# Suppress SQLAlchemy ORM type errors (Column[X] vs X assignments)
[[tool.mypy.overrides]]
module = "app.persistence.*"
disable_error_code = ["valid-type", "misc", "var-annotated", "assignment"]

[[tool.mypy.overrides]]
module = "app.api.routes_jobs"
disable_error_code = ["arg-type", "operator", "assignment"]

[[tool.mypy.overrides]]
module = "app.api.routes_analyze"
disable_error_code = ["union-attr", "arg-type"]

[[tool.mypy.overrides]]
module = "app.api.routes_reports"
disable_error_code = ["arg-type"]

[[tool.mypy.overrides]]
module = "app.api.routes_model"
disable_error_code = ["return-value"]

[[tool.mypy.overrides]]
module = "app.api.rate_limit"
disable_error_code = ["assignment", "arg-type"]

# Suppress ML/numpy/torch/opencv type errors
[[tool.mypy.overrides]]
module = "app.ml.*"
disable_error_code = ["arg-type", "assignment", "attr-defined", "return-value", "operator", "call-overload", "misc", "annotation-unchecked", "var-annotated", "dict-item"]

# Suppress pydantic computed_field + @property decorator errors
[[tool.mypy.overrides]]
module = "app.settings"
disable_error_code = ["prop-decorator"]

# Suppress plotting library type issues
[[tool.mypy.overrides]]
module = "app.services.plotting"
disable_error_code = ["arg-type"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
]
addopts = "-v --tb=short"
